--- a/App3/Views/LoginPage.xaml
+++ b/App3/Views/LoginPage.xaml
@@ -8,11 +8,11 @@
     prism:ViewModelLocator.AutoWireViewModel="True"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:designtime="using:App3.DesignTime"
+    xmlns:app3="using:App3"
     mc:Ignorable="d">
     
     <d:Page.DataContext>
-        <designtime:LoginPageViewModel/>
+        <app3:LoginPageViewModel/>
     </d:Page.DataContext>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
